objects/GP_Rel_History__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GPID__c</fullName>
        <formula>GrandParent_ID__r.AOPS_Cust_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GPID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrandParent_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GrandParent ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GP/GGP Relationship Histories</relationshipLabel>
        <relationshipName>GP_Relationship_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Great_GrandParent_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Great GrandParent ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GP/GGP Relationship Histories</relationshipLabel>
        <relationshipName>GP_Relationship_Histories2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ParentID__c</fullName>
        <formula>Parent_ID__r.AOPS_Cust_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>GP_Relationship_Histories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GP_Relationship_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>GP/GGP Relationship History</label>
    <nameField>
        <label>GP/GGP Rel History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GP/GGP Relationship Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>